--- a/api-gateway-v2/src/main/resources/application.yml
+++ b/api-gateway-v2/src/main/resources/application.yml
@@ -35,6 +35,13 @@ spring:
           predicates:
              - Path=/facture
              - Method=GET
+        - id: login
+          uri: lb://user-service
+          predicates:
+            - Path=/login
+            - Method=POST
+          filters:
+            - name: Logger
       discovery:
         locator:
           enabled: true
