--- a/facture_service/src/main/resources/application.yml
+++ b/facture_service/src/main/resources/application.yml
@@ -5,3 +5,42 @@ spring:
     active: dev
   config:
     import: configserver:http://root:monCode@localhost:8888
+
+  cloud:
+    stream:
+      function:
+        definition: input;processor;output
+      binders:
+        # nom du binder, arbitraire
+        rabbit:
+          type: rabbit
+          environment:
+            spring:
+              rabbitmq:
+                host: localhost
+                port: 5672
+                username: guest
+                password: guest
+                virtual-host: /
+      bindings:
+        # listening processed messages
+        input-in-0:
+          # Exchange
+          destination: queue.processed.log.messages
+          binder: rabbit
+          # Queue
+          group: processed
+        # producing unprocessed messages
+        output-out-0:
+          destination: queue.log.messages
+          binder: rabbit
+          group: unprocessed
+        # get unprocessed and send processed
+        processor-in-0:
+          destination: queue.log.messages
+          binder: rabbit
+          group: unprocessed
+        processor-out-0:
+          destination: queue.processed.log.messages
+          binder: rabbit
+          group: processed
